fixed alignment

--- a/styles/style.css
+++ b/styles/style.css
@@ -166,7 +166,7 @@ header {
 
   font-weight: normal;
   font-style: normal;
-  text-align:left;
+  text-align:center;
 }
 
 .main {
